--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.7.0 - 08-08-2022 */
 .elementor-heading-title{padding:0;margin:0;line-height:1}.elementor-widget-heading .elementor-heading-title[class*=elementor-size-]>a{color:inherit;font-size:inherit;line-height:inherit}.elementor-widget-heading .elementor-heading-title.elementor-size-small{font-size:15px}.elementor-widget-heading .elementor-heading-title.elementor-size-medium{font-size:19px}.elementor-widget-heading .elementor-heading-title.elementor-size-large{font-size:29px}.elementor-widget-heading .elementor-heading-title.elementor-size-xl{font-size:39px}.elementor-widget-heading .elementor-heading-title.elementor-size-xxl{font-size:59px}</style>
-<h2 class="elementor-heading-title elementor-size-default">Powerful widgets to track <br>Bitcoin, Mempool, crypto and NFTs <br>on your iPhone, iPad and Apple Watch...</h2>		</div>
+<h2 class="elementor-heading-title elementor-size-default">Powerful widgets to track <br>Bitcoin, Mempool, crypto and NFTs <br>on your iPhone, iPad and Apple Watch.</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-f9fd2c0 elementor-widget elementor-widget-image" data-id="f9fd2c0" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
